src/x11/meta-x11-display-private.h
@@ -292,7 +292,8 @@ int meta_x11_display_get_screen_number (MetaX11Display *x11_display);
 
 int meta_x11_display_get_damage_event_base (MetaX11Display *x11_display);
 
-void meta_x11_display_set_cm_selection (MetaX11Display *x11_display);
+void meta_x11_display_set_cm_selection (MetaX11Display *x11_display,
+                                        uint32_t        timestamp);
 
 gboolean meta_x11_display_xwindow_is_a_no_focus_window (MetaX11Display *x11_display,
                                                         Window xwindow);
